# richard-fib-rs

./: .gitignore  Cargo.toml  README.md  pyproject.toml  setup.py
.cargo/: config
richard_fib_rs/: __init__.py  counter.py  fib_number_adapter.py  fib_number_command.py
src/: lib.rs
src/fib_calcs/: fib_number.rs  fib_numbers.rs
