[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "richard-fib-rs"
version = "0.1"
description = "A description for your project"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
]


[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
packages = ["richard_fib_rs"]

[tool.setuptools-rust]
bindings = "pyo3"

[[tool.setuptools-rust.extension]]
name = "richard_fib_rs.richard_fib_rs"
path = "Cargo.toml"
