# pyproject.toml
[build-system]
requires = ["setuptools", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "richard-fib-rs"
version = "0.1"

[tool.setuptools.packages]


[[tool.setuptools-rust.ext-modules]]
# Private Rust extension module to be nested into the Python package
target = "richard_fib_rs.richard_fib_rs"  # The last part of the name (e.g. "_lib") has to match lib.name in Cargo.toml,
                             # but you can add a prefix to nest it inside of a Python package.
path = "Cargo.toml"      # Default value, can be omitted
binding = "PyO3"         # Default value, can be omitted